Fix header layout spacing issue

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -323,7 +323,7 @@ h4 {
   width: 100%;
   height: 6rem;
   background-color: #3778c2;
-  padding: 20px;
+  padding: 5px;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -390,7 +390,7 @@ h4 {
 .actions-login {
   position: relative;
   top: -15rem;
-  left: 19rem;
+  left: 22rem;
 }
 
 .login-submit {
@@ -423,7 +423,7 @@ h4 {
 .actions-signup {
   position: relative;
   bottom: 30rem;
-  left: 19.5rem;
+  left: 22.5rem;
 }
 
 .signup-form-btn {
